--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
   font-family: 'Share Tech Mono', monospace;
   color: #daf6ff;
   text-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
+  box-shadow: 0 0 20px rgba(10, 175, 230, 0.74), 0 0 20px rgba(10, 175, 230, 0);
 }
 
 .base {
